# Python-syntax-core

./: .bandit  .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config-tests.yaml  .pre-commit-config.yaml  ARCHIVE_CLEANUP_RECOMMENDATION.md  AVOID_TEST_HANGS.md  BINANCE_CLIENT_COVERAGE_SUCCESS_REPORT.md  CLEANUP_SUCCESS_REPORT.md  CODE_STYLE.md  COMPLETE_TEST_CLEANUP_PLAN.md  CONFIG_MANAGER_COVERAGE_SUCCESS_REPORT.md  COVERAGE_CONFIG_README.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_IMPROVEMENT_SUCCESS_REPORT.md  COVERAGE_OPTIMIZATION_FINAL_REPORT.md  COVERAGE_TESTS_CONSOLIDATION_PLAN.md  COVERAGE_TESTS_CONSOLIDATION_PROGRESS.md  CURRENT_TEST_STATUS_SUMMARY.md  CURSOR_CLAUDE_INTEGRATION_EXPLAINED.md  CURSOR_PRO_INTEGRATION.md  DATA_TRANSFORMERS_COVERAGE_SUCCESS_REPORT.md  DEPENDENCIES.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DOCS_CLEANUP_COMPLETION_REPORT.md  Dockerfile  EXCHANGE_CLIENT_COVERAGE_SUCCESS_REPORT.md  FAILED_TESTS_LIST.md  FINAL_TEST_MODERNIZATION_REPORT.md  LATEST_TEST_STATUS_REPORT.md  LEGACY_TESTS.md  METRICS_COLLECTOR_COVERAGE_SUCCESS_REPORT.md  Makefile  README.md  TEMPFILE_CLEANUP_GUIDE.md  TEST_CLEANUP_ANALYSIS.md  (+97 more)
.github/workflows/: ci.yml  docker-build.yml  nightly-health.yml  perf-regression.yml  test_layers.yml
archive/: README.md
archive/coverage_reports/: COVERAGE_ENHANCEMENT_REPORT.md
archive/docs/: ACCURATE_PROJECT_STATUS_UPDATE_2024-12-20.md  CODE_QUALITY_IMPROVEMENTS_COMPLETED.md  COMPREHENSIVE_QUALITY_ASSESSMENT_2024-12-20.md  DATA_PROCESSOR_REFACTORING_COMPLETED.md  MEDIUM_PRIORITY_REFACTORING_COMPLETED.md  README_NETWORK.md  README_TELEGRAM.md  README_TESTNET.md  REMAINING_ISSUES_RESOLUTION_COMPLETED.md  TEST_STABILITY_FIXES_COMPLETED.md
archive/old_tests/: test_100_percent_coverage_blitz.py  test_breakout_strategies_coverage.py  test_brokers_comprehensive.py  test_config_defaults_comprehensive.py  test_config_utils_coverage.py  test_core_modules_coverage.py  test_core_price_fetcher_coverage.py  test_core_trading_engine_coverage.py  test_data_saver_comprehensive.py  test_data_transformers_comprehensive.py  test_data_transformers_coverage.py  test_exchange_client_coverage.py  test_final_100_percent.py  test_improved_strategy_comprehensive.py  test_improved_strategy_coverage.py  test_improved_strategy_enhanced.py  (+22 more)
config/: gc_settings.py
docs/: CI_CD.md  MONITORING.md  PROJECT_PHASES.md  TEST_ORGANIZATION_BEST_PRACTICES.md  TEST_ORGANIZATION_CHECKLIST.md  index.md
examples/: README.md  retry_example.py  sma_demo.py
monitoring/: alerts.yml  prometheus_rules.yml
scripts/: __init__.py  ci_test.py  config.ini.template  config.yaml.template  daily_reconciliation.sh  fix_indentation.py  fix_metrics_collector.py  git_push_demo.py  m4_completion_check.py  market_data.py  monitoring.py  performance_profiler.py  pre-commit-check.sh  quick_fix_syntax.py  run_stability_test.sh  safe-push.sh  stability_test.py  status_check.py
site/: 404.html  index.html  sitemap.xml
src/: README.md  __init__.py  _legacy_backtest_ma.py  _legacy_crossovers.py  backtest.py  binance_client.py  broker.py  config.py  data.py  data_processor.py  database.py  exchange_client.py  improved_strategy.py  market_simulator.py  metrics.py  network.py  notify.py  portfolio_backtest.py  reconcile.py  signals.py  telegram.py  trading_loop.py  utils.py
tests/: README.md  __init__.py  conftest.py  conftest_modern.py  test_async_trading_engine.py  test_backtest.py  test_backward_compatibility_modules.py  test_binance_client_coverage_boost.py  test_broker.py  test_broker_single.py  test_brokers_binance_client.py  test_comprehensive_coverage.py  test_config.py  test_config_consolidated.py  test_config_refactoring.py  test_core_modules_comprehensive.py  test_core_network.py  test_core_network_client.py  test_core_network_retry_manager.py  test_core_position_management.py  test_core_signal_processor.py  test_core_trading_engine.py  test_data_processors.py  test_data_saver_final.py  test_data_splitters_comprehensive.py  test_data_transformers.py  test_env.py  test_exchange_client.py  test_exchange_client_coverage_boost.py  test_final_coverage.py  test_improved_strategy.py  test_low_coverage_improvements.py  test_medium_priority_continued.py  test_medium_priority_transformers.py  test_metrics.py  test_metrics_collector.py  test_monitoring.py  test_network_modules.py  test_notify.py  test_optimize.py  (+24 more)
(+302 files in other folders)
