[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_framework"
version = "0.1.0"
description = "A modular Python framework for backtesting algorithmic trading strategies"
readme = "README.md"
authors = [
    {name = "Saul2049"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "tqdm>=4.66.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
] 